--- a/index.html
+++ b/index.html
@@ -5,14 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="site.css">
     <title>
         Ana Sayfa
     </title>
+    <style>
+        /* p {
+            color: blue;
+        }
+
+        h2 {
+            color: blue;
+        } */
+    </style>
 </head>
 
 <body>
-    <h1>Merhaba Github!</h1>
-    <p>CI pipeline çalıştı</p>
+    <a href="">Ana Sayfa</a>
+    <a class="link" href="about.html">Hakkımızda</a>
+    <a class="link" id="contact-link" href="">iletişim</a>
+    <h1 style="color: red;">Merhaba Github!</h1>
+    <h2>İkinci başlık</h2>
+    <h2>dipğer h2 elementi</h2>
+    <h3 class="bg-dark text-yellow">Üçüncü başlık</h3>
+    <p id="ozel-p-elementi">CI pipeline çalıştı</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse minus itaque minima, magnam reprehenderit
+        voluptatibus autem omnis! Quidem modi in voluptatibus eaque, reprehenderit consequatur officiis ut quas
+        assumenda natus? Harum?</p>
+    <p class="text-yellow bg-dark ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sequi, sunt
+        voluptatem incidunt
+        illum doloribus
+        esse eveniet voluptates, quasi ratione dolor odit officiis exercitationem laborum temporibus perspiciatis eum ea
+        eligendi.</p>
+    <p class="bg-dark text-primary"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis id quas officiis
+        sint omnis nemo
+        fugiat dignissimos doloribus, nesciunt, nam nulla ut odit similique rem. Nostrum dicta nam voluptates quibusdam.
+    </p>
 </body>
 
 </html>
